# exercise6

./: CMakeLists.txt  map.pgm  map.yaml  package.xml  waypoints.json
launch/: amcl_simulation.launch  dummy.launch  main.launch  mega.launch  save_waypoints.launch
scripts/: detect_rings  face_localizer_custom  parking.py
src/: cylinder_segmentation.cpp  main.cpp  ring_cylinder_segmentation.cpp  save_waypoints.cpp
worlds/: rins.world
